--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
             For years I create efficient, reliable applications and websites.
         </p>
         <p>
-            I had an opportunity to work using many modern technologies and frameworks. Most fun I have with:
+            I had an opportunity to work using many modern technologies and frameworks. The most fun I have with:
 
             <ul>
                 <li>Laravel / Lumen</li>
                 <li>microservices</li>
                 <li>PHPUnit</li>
-                <li>Git</li>
                 <li>Nintendo Switch 🎮</li>
             </ul>
         </p>
@@ -37,9 +36,10 @@
         </p>
 
         <p>Want to know me better?<br>
-            <a href="https://www.linkedin.com/in/marcin-marchwiany-942b6460/">linkedin</a>,
-            <a href="https://www.flickr.com/photos/marchwiany/">flickr</a>,
-            <a href="https://www.facebook.com/marcin.marchwiany">fb</a>
+            <a target="_blank" href="https://www.linkedin.com/in/marcin-marchwiany-942b6460/">LinkedIn</a>,
+            <a target="_blank" href="https://www.flickr.com/photos/marchwiany/">Flickr</a>,
+            <a target="_blank" href="https://www.facebook.com/marcin.marchwiany">Facebook</a>,
+            <a target="_blank" href="https://www.instagram.com/marcinmarchwiany/">Instagram</a>
         </p>
     </div>
     </main>
