--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             I had an opportunity to work using many modern technologies and frameworks. The most fun I have with:
 
             <ul>
-                <li>Laravel / Lumen</li>
+                <li>JS (Node.js/React)</li>
+                <li>PHP (Laravel/Symfony)</li>
                 <li>microservices</li>
-                <li>PHPUnit</li>
                 <li>Nintendo Switch 🎮</li>
             </ul>
         </p>
