404 page styles fix

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <title>Marcin Marchwiany - Web Developer</title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
