styles + blog scaffolding

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <ul>
                 <li>JS (Node.js/React)</li>
                 <li>PHP (Laravel/Symfony)</li>
-                <li>microservices</li>
                 <li>Nintendo Switch 🎮</li>
+                <!-- <li>check out my <a href="/blog.html">blog</a></li> -->
             </ul>
         </p>
 
