--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>JS (Node.js/React)</li>
                 <li>PHP (Laravel/Symfony)</li>
                 <li>Nintendo Switch 🎮</li>
-                <!-- <li>check out my <a href="/blog.html">blog</a></li> -->
+                <li>check out some of my <a href="/notes.html">dev notes</a></li>
             </ul>
         </p>
 
