--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Marcin Marchwiany - Dev Blog</title>
+    <title>Marcin Marchwiany - Dev Notes</title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -14,24 +14,16 @@
 <body>
     <div class="container">
         <h3>Marcin Marchwiany </h3>
-        <h1>Dev Blog</h1>
+        <h1>Dev Notes</h1>
         
         <div class="box">
-            <h3>Sample post</h3>
-            <small>2020-03-20</small>
+            <h3>Unique ID and soft delete</h3>
+            <small>2020-03-21</small>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum unde dolore soluta sint aut quas, sunt ipsum. Quidem, asperiores magnam?
-                <br><a href="/blog/sample-post.html">read more...</a>
+                Let's imagine that we have a table in the database containing organizations. We would like each organization to be uniquely identified by its code. Of course, we want this table to contain no duplicate organizations 
+                (...)
             </p>
-        </div>
-
-        <div class="box">
-            <h3>Sample post</h3>
-            <small>2020-03-20</small>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum unde dolore soluta sint aut quas, sunt ipsum. Quidem, asperiores magnam?
-                <br><a href="/blog/sample-post.html">read more...</a>
-            </p>
+            <a href="/notes/unique-id-and-soft-delete.html">read more</a>
         </div>
 
         <a href="/">back</a>
