--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
             <ul>
                 <li>JS (Node.js/React)</li>
                 <li>PHP (Laravel/Symfony)</li>
+                <li>microservices</li>
                 <li>Nintendo Switch 🎮</li>
-                <li>check out some of my <a href="/notes.html">dev notes</a></li>
             </ul>
+        </p>
+
+        <p>
+            Check out some of my <a href="/notes.html">dev notes</a>.
         </p>
 
         <p>
