--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,11 +17,11 @@
         <h3>web developer</h3>
 
         <p>
-            For years I create efficient, reliable applications and websites.
+            For years, I’ve been crafting efficient and reliable applications and websites. 
         </p>
         <p>
-            I had an opportunity to work using many modern technologies and frameworks. The most fun I have with:
-
+            I’ve had the opportunity to work with various modern technologies and frameworks, but I have the most fun with:
+        </p>
             <ul>
                 <li>JS (Node.js/React)</li>
                 <li>PHP (Laravel/Symfony)</li>
@@ -31,15 +31,15 @@
         </p>
 
         <p>
-            Check out some of my <a href="/notes.html">dev notes</a>.
+            Check out some of my <a href="/notes.html">dev notes</a> - maybe you’ll find something interesting.
         </p>
 
         <p>
-            Do you think we can cooperate and build something cool?
+            💡 Think we can collaborate and build something awesome? Let’s talk!
             <a href="mailto:marcin.marchwiany@gmail.com">marcin.marchwiany@gmail.com</a>
         </p>
 
-        <p>Want to know me better?<br>
+        <p>Want to know more about me? Find me on:<br>
             <a target="_blank" href="https://www.linkedin.com/in/marcin-marchwiany-942b6460/">LinkedIn</a>,
             <a target="_blank" href="https://www.flickr.com/photos/marchwiany/">Flickr</a>,
             <a target="_blank" href="https://www.facebook.com/marcin.marchwiany">Facebook</a>,
