--- a/notes.html
+++ b/notes.html
@@ -20,7 +20,7 @@
             <h3>Unique ID and soft delete</h3>
             <small>2020-03-21</small>
             <p>
-                Let's imagine that we have a table in the database containing organizations. We would like each organization to be uniquely identified by its code. Of course, we want this table to contain no duplicate organizations 
+                Let's consider a database table that stores organizations. Each organization should be uniquely identified by a <code>code</code>, and we want to ensure that no duplicate organizations exist.
                 (...)
             </p>
             <a href="/notes/unique-id-and-soft-delete.html">read more</a>
