--- a/notes/unique-id-and-soft-delete.html
+++ b/notes/unique-id-and-soft-delete.html
@@ -10,15 +10,14 @@
   <body>
     <div class="container">
       <div class="box">
-        <h3>Marcin Marchwiany </h3>
+        <h3><a href="/">Marcin Marchwiany</a></h3>
         <h1>Dev Notes</h1>
         <h2>Unique ID and soft delete. </h4>
           <h4>2020-03-21</h4>
           <p>Let's consider a database table that stores organizations. Each organization should be uniquely identified by a <code>code</code>, and we want to ensure that no duplicate organizations exist. </p>
           <h4>Initial Table Structure</h4>
           <p>A standard way to enforce uniqueness is by creating a unique index on the <code>code</code> column: </p>
-          <pre>
-                                    <code>CREATE TABLE `organizations` (
+          <pre><code>CREATE TABLE `organizations` (
     `id` INT(10) UNSIGNED NOT NULL AUTO_INCREMENT,
     `name` VARCHAR(255) NOT NULL,
     `code` VARCHAR(8) NOT NULL,
@@ -26,12 +25,10 @@
     `updated_at` TIMESTAMP NULL DEFAULT NULL ON UPDATE CURRENT_TIMESTAMP,
     PRIMARY KEY (`id`),
     UNIQUE INDEX `UK_organizations_code` (`code`)
-);</code>
-                                </pre>
+);</code></pre>
           <h4>Implementing a Soft Delete Mechanism</h4>
           <p>To allow soft deletion, we introduce a <code>deleted_at</code> column, which stores the timestamp when a record is marked as deleted. If an organization is active, this column remains <code>NULL</code>. </p>
-          <pre>
-                                    <code>CREATE TABLE `organizations` (
+          <pre><code>CREATE TABLE `organizations` (
     `id` INT(10) UNSIGNED NOT NULL AUTO_INCREMENT,
     `name` VARCHAR(255) NOT NULL,
     `code` VARCHAR(8) NOT NULL,
@@ -40,14 +37,12 @@
     `deleted_at` TIMESTAMP NULL DEFAULT NULL,
     PRIMARY KEY (`id`),
     UNIQUE INDEX `UK_organizations_code` (`code`)
-);</code>
-                                </pre>
+);</code></pre>
           <h4>The Problem with Unique Constraints and Soft Deletion</h4>
           <p>Suppose we insert an organization with <code>code = 'ORG1'</code>. Later, this organization is marked as deleted by setting <code>deleted_at</code> to a timestamp. If we then try to insert a new organization with the same <code>code</code>, the unique index constraint will prevent it. </p>
           <h4>Solution: Conditional Uniqueness</h4>
           <p>We want to enforce uniqueness only for active (non-deleted) organizations. To achieve this, we modify the unique index to consider both <code>code</code> and <code>deleted_at</code>: </p>
-          <pre>
-                                    <code>CREATE TABLE `organizations` (
+          <pre><code>CREATE TABLE `organizations` (
     `id` INT(10) UNSIGNED NOT NULL AUTO_INCREMENT,
     `name` VARCHAR(255) NOT NULL,
     `code` VARCHAR(8) NOT NULL,
@@ -56,8 +51,7 @@
     `deleted_at` TIMESTAMP NULL DEFAULT NULL,
     PRIMARY KEY (`id`),
     UNIQUE INDEX `UK_organizations_code` (`code`, `deleted_at`)
-);</code>
-                                </pre>
+);</code></pre>
           <h4>How This Works</h4>
           <p>For active organizations, <code>deleted_at</code> is <code>NULL</code>, so the unique constraint ensures that only one active record exists per <code>code</code>. </p>
           <p>When an organization is soft-deleted, <code>deleted_at</code> is set to a timestamp, making the <code>(code, deleted_at)</code> pair unique. </p>
