--- a/notes.html
+++ b/notes.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h3>Marcin Marchwiany </h3>
+        <h3><a href="/">Marcin Marchwiany</a></h3>
         <h1>Dev Notes</h1>
         
         <div class="box">
